DEF. 1.0: concluso footer e sistemate alcune spaziature tra gli elementi

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="container-large">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="row">
-                    <div class="col_4_9">
+                    <div class="col_3_9">
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
                             posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente
                             e integrato per ottimizzare il flusso di lavoro esistente.</p>
@@ -43,7 +43,7 @@
                         <p>Annulla in qualsisasi momento</p>
                         <h2><i class="fas fa-arrow-down"></i></h2>
                     </div>
-                    <img class="col_5_9" src="img/jumbo.png" alt="img-1">
+                    <img class="col_6_9" src="img/jumbo.png" alt="img-1">
                 </div>
             </div>
         </div>
@@ -87,7 +87,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- 2^ COLONNA -->
                 <div class="col_3_9">
                     <div class="border-height">
                         <p class="col-title"><i class="far fa-building"></i> Team</p>
@@ -116,7 +115,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- 3^ COLONNA -->
                 <div class="col_3_9">
                     <div class="border-height">
                         <p class="col-title"><i class="far fa-building"></i> Team</p>
@@ -178,7 +176,6 @@
             <div class="operations">
                 <h2>Esegui più operazioni con Dropbox Business</h2>
                 <div class="row neg-margin">
-                    <!-- ********img-1********* -->
                     <div class="col_3_9">
                         <img src="img/business-feature-switching-tools.png" alt="switching-tools">
                         <h3>Passa di meno da uno strumento all'altro</h3>
@@ -186,7 +183,6 @@
                             contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span
                                 class="i-saw-you">Dropbox Paper</span> direttamente da Dropbox.</p>
                     </div>
-                    <!-- ********img-2********* -->
                     <div class="col_3_9">
                         <img src="img/business-feature-coordinate-it.png" alt="coordinate">
                         <h3>Passa di meno da uno strumento all'altro</h3>
@@ -194,7 +190,6 @@
                             contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
                             Dropbox Paper direttamente da Dropbox.</p>
                     </div>
-                    <!-- ********img-3********* -->
                     <div class="col_3_9">
                         <img src="img/business-feature-multi-device.png" alt="multi-device">
                         <h3>Passa di meno da uno strumento all'altro</h3>
@@ -202,7 +197,6 @@
                             contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
                             Dropbox Paper direttamente da Dropbox.</p>
                     </div>
-                    <!-- ********img-4********* -->
                     <div class="col_3_9">
                         <img src="img/business-feature-integrations-it.png" alt="integrations">
                         <h3>Passa di meno da uno strumento all'altro</h3>
@@ -210,7 +204,6 @@
                             contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
                             Dropbox Paper direttamente da Dropbox.</p>
                     </div>
-                    <!-- ********img-5********* -->
                     <div class="col_3_9">
                         <img src="img/business-feature-send-files-it.png" alt="send-files">
                         <h3>Passa di meno da uno strumento all'altro</h3>
@@ -218,7 +211,6 @@
                             contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
                             Dropbox Paper direttamente da Dropbox.</p>
                     </div>
-                    <!-- ********img-6********* -->
                     <div class="col_3_9">
                         <img src="img/business-feature-security.png" alt="security">
                         <h3>Passa di meno da uno strumento all'altro</h3>
@@ -234,7 +226,6 @@
             </div>
         </div>
         <div class="box-container clearfix">
-            <!-- *****LATO SINISTRO**** -->
             <div class="box-container-aside clearfix">
                 <div class="single-box bg-green">
                     <img src="img/designit.svg" alt="designit">
@@ -249,7 +240,6 @@
                     <img src="img/topps.svg" alt="topps">
                 </div>
             </div>
-            <!-- *****CENTRO**** -->
             <div class="box-container-center">
                 <img src="img/designit.svg" alt="designit">
                 <hr>
@@ -259,7 +249,6 @@
                 </p>
                 <p class="author">Morten Thomsen, Global IT Lead</p>
             </div>
-            <!-- *****LATO DESTRO**** -->
             <div class="box-container-aside clearfix">
                 <div class="single-box bg-wine">
                     <img src="img/world_bicycle_relief.svg" alt="bicycle">
@@ -274,9 +263,6 @@
                     <img src="img/clear_channel.svg" alt="clear">
                 </div>
             </div>
-
-
-
         </div>
         <div class="bg-sky">
             <div class="container">
@@ -290,7 +276,6 @@
                 </div>
             </div>
         </div>
-        <!-- FREQUENTI -->
         <div class="freq">
             <div class="container">
                 <h3>Domande frequenti</h3>
@@ -300,7 +285,7 @@
                     </div>
                     <div class="col_3_9">
                         <i class="fas fa-chevron-down"></i>
-                    </div>                   
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col_6_9">
@@ -308,7 +293,7 @@
                     </div>
                     <div class="col_3_9">
                         <i class="fas fa-chevron-down"></i>
-                    </div>                   
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col_6_9">
@@ -316,7 +301,7 @@
                     </div>
                     <div class="col_3_9">
                         <i class="fas fa-chevron-down"></i>
-                    </div>                   
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col_6_9">
@@ -324,12 +309,73 @@
                     </div>
                     <div class="col_3_9">
                         <i class="fas fa-chevron-down"></i>
-                    </div>                   
+                    </div>
                 </div>
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container clearfix">
+            <ul>
+                <li>
+                    <h5>Dropbox</h5>
+                </li>
+                <li><a href="#">Applicazione desktop</a></li>
+                <li><a href="#">Perchè Dropbox</a></li>
+                <li><a href="#">Piani</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Funzioni</a></li>
+            </ul>
+            <ul>
+                <li>
+                    <h5>Prodotti</h5>
+                </li>
+                <li><a href="#">Applicazione desktop</a></li>
+                <li><a href="#">Perchè Dropbox</a></li>
+                <li><a href="#">Piani</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Funzioni</a></li>
+            </ul>
+            <ul>
+                <li>
+                    <h5>Azienda</h5>
+                </li>
+                <li><a href="#">Applicazione desktop</a></li>
+                <li><a href="#">Perchè Dropbox</a></li>
+                <li><a href="#">Piani</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Funzioni</a></li>
+            </ul>
+            <ul>
+                <li>
+                    <h5>Supporto</h5>
+                </li>
+                <li><a href="#">Applicazione desktop</a></li>
+                <li><a href="#">Perchè Dropbox</a></li>
+                <li><a href="#">Piani</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Funzioni</a></li>
+            </ul>
+            <ul>
+                <li>
+                    <h5>Community</h5>
+                </li>
+                <li><a href="#">Applicazione desktop</a></li>
+                <li><a href="#">Perchè Dropbox</a></li>
+                <li><a href="#">Piani</a></li>
+            </ul>
+        </div>
+        <div class="container">
+            <hr>
+            <div>
+                <i class="fas fa-globe-americas"></i>
+                <select name="lang" id="lang">
+                    <i class="fas fa-globe-americas"></i>
+                    <option value="it"></i>Italiano</option>
+                </select>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
