Cercando di fare la "tendina" sulle domande frequenti

--- a/index.html
+++ b/index.html
@@ -286,6 +286,21 @@
                     <div class="col_3_9">
                         <i class="fas fa-chevron-down"></i>
                     </div>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur incidunt hic cumque, at
+                        inventore quis sunt pariatur in nostrum facere nihil rerum nisi temporibus optio eligendi.
+                        Cupiditate voluptates tenetur fugit?
+                        Pariatur dolor, eaque quibusdam beatae assumenda explicabo? Officia nisi voluptate omnis aliquid
+                        dolor commodi! Aperiam vel reprehenderit quae, ad veniam dolorem deserunt perspiciatis illum
+                        voluptate, ab, culpa assumenda placeat maxime.
+                        Reprehenderit minima fugiat perferendis amet voluptatum pariatur itaque enim veritatis totam.
+                        Cupiditate illum expedita explicabo, qui, eveniet, quisquam doloribus pariatur nemo quasi
+                        corporis delectus eaque. Nisi dolore accusantium tenetur ad.
+                        Corporis amet illo sequi repellat deleniti! Necessitatibus sed cumque suscipit quasi recusandae
+                        quisquam, aperiam accusamus veritatis, minima nisi aut nesciunt modi doloremque perferendis
+                        minus voluptates repellendus veniam unde, quaerat atque.
+                        Perspiciatis, voluptatibus ullam. At tenetur vel tempora provident magni maxime, quod autem,
+                        necessitatibus iste vitae rerum quidem obcaecati illo ipsam eos. Saepe nobis voluptatibus hic
+                        maiores porro iure rerum eligendi?</p>
                 </div>
                 <div class="row">
                     <div class="col_6_9">
