--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="row">
                     <div class="col_3_9">
-                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
-                            posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente
-                            e integrato per ottimizzare il flusso di lavoro esistente.</p>
-                        <a href="#" class="button-blue">Inizia la tua prova gratuita</a>
-                        <p>Annulla in qualsisasi momento</p>
-                        <h2><i class="fas fa-arrow-down"></i></h2>
+                        <div class="hero-text">
+                            <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo
+                                stesso
+                                posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo
+                                intelligente
+                                e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                            <a href="#" class="button-blue">Inizia la tua prova gratuita</a>
+                            <p>Annulla in qualsisasi momento</p>
+                            <h2><i class="fas fa-arrow-down"></i></h2>
+                        </div>
                     </div>
                     <img class="col_6_9" src="img/jumbo.png" alt="img-1">
                 </div>
